app code generator is working, and fixed some bugs on mobile side

--- a/XCuseme/XCuseme/www/css/main.css
+++ b/XCuseme/XCuseme/www/css/main.css
@@ -82,7 +82,7 @@
 
 #productDetail-page .orderButtonBg{
 	position: absolute;
-	bottom: 4px;
+	bottom: 5px;
 	right: 0px;
 	top: 0px;
 	width: 30%;
